cmake_minimum_required(VERSION 3.4)
project(libForge)

set(OUTPUT_DIR "${PROJECT_BINARY_DIR}/bin/")

set(SOURCE_FILES
    src/main.cpp
    src/libForge.cpp)
set(INCLUDE_FILES
    include/libForge.h)
add_executable(libForge ${SOURCE_FILES} ${INCLUDE_FILES})
target_include_directories(libForge PUBLIC include)

set_property(TARGET libForge PROPERTY CXX_STANDARD 11)
set_property(TARGET libForge PROPERTY CXX_STANDARD_REQUIRED ON)

set_property(TARGET libForge PROPERTY RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET libForge PROPERTY LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET libForge PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set_property(TARGET libForge PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET libForge PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET libForge PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)